fix: fix overflow height in characterinfo page

--- a/src/pages/CharactersInfoPage/CharactersInfoPage.css
+++ b/src/pages/CharactersInfoPage/CharactersInfoPage.css
@@ -43,7 +43,7 @@
 }
 
 .character-info__image {
-    position: absolute;
+  position: absolute;
   top: 0;
   left: 0;
   width: 100%;
@@ -65,6 +65,11 @@
 }
 
 @media (max-width: 767px) {
+  .character-info {
+    max-height: calc(100vh - 200px - 120px);
+    overflow-y: scroll;
+  }
+
   .character-info__card {
     flex-direction: column;
     gap: 8px;
